--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "homepage": "https://github.com/NelsonEspadoto/cursocypress#readme",
   "dependencies": {
-    "cypress": "^3.6.0"
+    "cypress": "^3.6.0",
+    "cypress-xpath": "^1.4.0"
   },
   "devDependencies": {
     "chai": "^4.3.4"
